# self-learning-knowledge-agent

./: .gitignore  BLOG.md  DESIGN.md  LICENSE  README.md  TDS.md  config.json  pyproject.toml
coco/: __main__.py  agent.py  auth.py  config.py  documents.py  embeddings.py  extraction.py  fetch.py  llm.py  memory.py  prompts.py  retrieval.py  session.py  streaming.py  strength.py  tracing.py  ui.py
